fix (menu): vertical overflow closes #1

--- a/src/app/app.scss
+++ b/src/app/app.scss
@@ -1,4 +1,7 @@
 ion-menu {
+  .scroll-content {
+    overflow: hidden;
+  }
   ion-header {
     .toolbar-background {
       background-color: white;
